--- a/api/package.json
+++ b/api/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mapped-types": "^1.2.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/dotenv": "^8.2.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
